feat Project complete
Player and enemy classes have been implemented and scoring functionality has been added.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
+    <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+      <h1>FROGGER. . .  I MEAN "ALIEN-BOY-ER"</h1>
+      <h2>RETURN OF THE HORRIBLE TILED BACKGROUND</h2>
+    </header>
+    <script src="js/jQuery.js"></script>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    <section id="score">
+      <p>You have made it to the river: 0 times :[</p>
+    </section>
+    <section id="failure">
+      <p>You have been hit: 0 times!</p>
+    </section>
 </body>
 </html>
